--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "grunt-contrib-cssmin": "^0.14.0",
     "grunt-contrib-htmlmin": "^0.6.0",
     "grunt-contrib-imagemin": "^1.0.0",
-    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-gh-pages": "^0.10.0",
-    "grunt-modernizr": "^1.0.1",
     "grunt-postcss": "^0.7.1",
-    "grunt-sass": "^1.1.0",
+    "grunt-sass": "^3.1.0",
     "grunt-svgmin": "^2.0.1",
     "helper-moment": "^0.1.0",
     "scally": "latest"
+  },
+  "dependencies": {
+    "sass": "^1.42.1"
   }
 }
